maze.pledge.PledgeMaze.scala.error
Compilation error:
PledgeMaze:13: error: not found: value prendsBiscuit
  prendsBiscuit()
  ^