maze.pledge.PledgeMaze.scala.code
var somme = 0
var mem : Direction = Direction.NORTH
override def run() {
  while(!estSurBiscuit){
    while(!estFaceMur){
      avance()
    }
  	do{
      keepHandOnSideWall()
    }while(somme!=0 || isDirectionFree(Direction.NORTH)==false)
  }
  prendsBiscuit()
  setDirection(Direction.EAST)
}

def keepHandOnSideWall(){ 
 	if(estFaceMur()){
    gauche()
    somme=somme+1
  }  
  if(estFaceMur()){
    gauche()
    somme=somme+1
  }
  if(estFaceMur()){
    gauche()
    somme=somme+1
  }
  if(somme==4){
    somme=0
  }
  if(somme==5){
    somme=1
  }
  if(somme==6){
    somme=2
  }
  if(somme==7){
    somme=3
  }
  if(!estSurBiscuit){
    avance()
    droite()
  }
}

def isDirectionFree(dir:Direction): Boolean ={
  var cpt=0
  while(getDirection!=dir){
    droite()
    cpt+=1
  }
  if(estFaceMur){
    while(cpt!=0){
      gauche()
      cpt-=1
    }
    return false
  }
  else{
    while(cpt!=0){
      gauche()
      cpt-=1
    }
    return true
  }
}